# libtc-dbgen

./: Makefile.am  README  configure.ac  tc-dbconf.xml
example/: Makefile  file_list.mk
example/include/: ID3Parser.h  MetaParser.h  TCTagParser.h  TCTime.h  UI_META_browsing.h  UTF.h  WMAParser.h  main.h  nls720.h  nls_app.h
example/src/: ID3Parser.c  ID3_Ext.c  MetaParser.c  TCTagParser.c  TCTime.c  UI_META_browsing.c  UTF.c  WMAParser.c  main.c  nls720.c  nls_app.c  nls_cp949.c
include/: DBConfig.h  TCDBDefine.h  TCDBGen.h  TCUtil.h  sqlite_query.h
src/: DBConfig.c  TCDBGen.c  TCUtil.c  sqlite_query.c
